embedded mongo db for tests